update readme about how plugins work; update some source files to reflect the README.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "tendril",
     "scripts": {
-        "start": "bin/tendril run default"
+        "start": "bin/tendril-vm ./programs/example.tendril"
     },
     "devDependencies": {
         "@types/node": "^12.12.14",
