--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     },
     "include": [
         "bin/**/*",
-        "programs/**/*",
+        "program-src/**/*",
         "src/**/*"
     ]
 }
